# uromyces

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  build.rs  clippy.toml  constraints.txt  pyproject.toml  run_python.py  tox.ini  uromyces.pyi
.github/workflows/: maturin.yml  rust.yml  test.yml
contrib/: scripts.py
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  index.md  migration.md  plugins.md  syntax.md
python/uromyces/: __init__.py  _cli.py  _compat.py  _convert.py  _plugins.py  _types.py  _uromyces.pyi  _util.py
src/: combine.rs  conversions.rs  display_precision.rs  errors.rs  inventory.rs  ledgers.rs  lib.rs  macros.rs  main.rs  options.rs  py_bindings.rs  summarize.rs  test_utils.rs  tolerances.rs
src/booking/: currency_groups.rs  errors.rs  methods.rs  mod.rs  tests.rs
src/booking/bean_snaps_booking/: STRICT_test_reduce__unambiguous.beancount
src/booking/bean_snaps_booking_imported/: FIFO_test_ambiguous__FIFO__no_match_against_any_lots.beancount  FIFO_test_ambiguous__FIFO__test_complete_match_against_first_three_lots.beancount  FIFO_test_ambiguous__FIFO__test_complete_match_against_first_two_lots.beancount  FIFO_test_ambiguous__FIFO__test_match_against_complete_first_lot.beancount  FIFO_test_ambiguous__FIFO__test_match_against_partial_first_lot.beancount  FIFO_test_ambiguous__FIFO__test_matching_more_than_is_available.beancount  FIFO_test_ambiguous__FIFO__test_partial_match_against_first_two_lots.beancount  FIFO_test_ambiguous__NONE__matching_existing1.beancount  FIFO_test_reduce__reduction_with_same_currency_not_at_cost.beancount  LIFO_test_ambiguous__LIFO__no_match_against_any_lots.beancount  LIFO_test_ambiguous__LIFO__test_complete_match_against_first_three_lots.beancount  LIFO_test_ambiguous__LIFO__test_complete_match_against_first_two_lots.beancount  LIFO_test_ambiguous__LIFO__test_match_against_complete_first_lot.beancount  LIFO_test_ambiguous__LIFO__test_matching_more_than_is_available.beancount  NONE_test_ambiguous__NONE__notmatching_mixed1.beancount  NONE_test_ambiguous__NONE__notmatching_mixed2.beancount  NONE_test_ambiguous__NONE__notmatching_nonmixed1.beancount  NONE_test_ambiguous__NONE__notmatching_nonmixed2.beancount  NONE_test_reduce__ambiguous__none.beancount  NONE_test_reduce__ambiguous__none__from_mixed.beancount  STRICT_WITH_SIZE_test_strict_with_size_multiple.beancount  STRICT_test_ambiguous__STRICT__mixed.beancount  STRICT_test_augment__at_cost__different_cost.beancount  STRICT_test_augment__at_cost__different_date.beancount  STRICT_test_augment__from_empty__at_cost__neg.beancount  STRICT_test_augment__from_empty__at_cost__pos.beancount  STRICT_test_augment__from_empty__incomplete_cost__with_currency.beancount  STRICT_test_augment__from_empty__no_cost__pos.beancount  STRICT_test_reduce__multiple_reductions__competing__with_error.beancount  STRICT_test_reduce__multiple_reductions__no_error_because_total.beancount  STRICT_test_reduce__no_cost.beancount  STRICT_test_reduce__sign_change_simple.beancount
src/booking/booking_full_tests_imported/: FIFO_test_ambiguous__FIFO__test_complete_match_against_first_three_lots.beancount  FIFO_test_ambiguous__FIFO__test_complete_match_against_first_two_lots.beancount  FIFO_test_ambiguous__FIFO__test_match_against_complete_first_lot.beancount  FIFO_test_ambiguous__FIFO__test_match_against_partial_first_lot.beancount  FIFO_test_ambiguous__FIFO__test_matching_more_than_is_available.beancount  FIFO_test_ambiguous__FIFO__test_partial_match_against_first_three_lots.beancount  FIFO_test_ambiguous__FIFO__test_partial_match_against_first_two_lots.beancount  FIFO_test_ambiguous__NONE__matching_existing2.beancount  FIFO_test_reduce__multiple_reductions.beancount  FIFO_test_reduce__multiple_reductions__overflowing__with_error.beancount  HIFO_test_reduce__multiple_reductions_hifo.beancount  LIFO_test_ambiguous__LIFO__test_complete_match_against_first_three_lots.beancount  LIFO_test_ambiguous__LIFO__test_complete_match_against_first_two_lots.beancount  LIFO_test_ambiguous__LIFO__test_match_against_complete_first_lot.beancount  LIFO_test_ambiguous__LIFO__test_match_against_partial_first_lot.beancount  LIFO_test_ambiguous__LIFO__test_matching_more_than_is_available.beancount  LIFO_test_ambiguous__LIFO__test_partial_match_against_first_three_lots.beancount  LIFO_test_ambiguous__LIFO__test_partial_match_against_first_two_lots.beancount  STRICT_WITH_SIZE_test_strict_with_size_multiple.beancount  STRICT_WITH_SIZE_test_strict_with_size_single.beancount  STRICT_test_ambiguous__STRICT_1.beancount  STRICT_test_ambiguous__STRICT_2.beancount  STRICT_test_ambiguous__STRICT__mixed.beancount  STRICT_test_augment__at_cost__same_date.beancount  STRICT_test_augment__from_empty__incomplete_cost__empty.beancount  STRICT_test_augment__from_empty__no_cost__neg.beancount  STRICT_test_reduce__ambiguous__strict.beancount  (+5 more)
src/parse/: convert.rs  errors.rs  mod.rs  node_fields.rs  node_ids.rs  tests.rs
src/plugins/: balances.rs  documents.rs  implicit_prices.rs  mod.rs  pad.rs  validation.rs
src/types/: account.rs  amount.rs  booking.rs  box_str.rs  convert_to_beancount.rs  cost.rs  currency.rs  date.rs  decimal.rs  flag.rs  interned_string.rs  metadata.rs  mod.rs  paths.rs  repr.rs  tags_links.rs
src/util/: mod.rs  paths.rs  timer.rs
tests/: __init__.py  conftest.py  load_test.rs  test_cli.py  test_compare.py  test_convert.py  test_plugins.py  test_summarize.py  test_types.py  test_types_entry_header.py  test_types_entry_meta.py  test_uromyces.py
tests/ledgers/: documents.beancount  example.beancount  invalid-input.beancount  long-example.beancount  pad.beancount  short-example.beancount  test-includes.beancount
tests/snapshots/: load_test__errors_on_invalid_ledger.snap  load_test__handles_includes.snap  load_test__loads_example_file.snap  load_test__loads_short_example_file.snap  load_test__missing_file.snap  load_test__pad_entries.snap  load_test__reads_document_dir.snap
uromyces/: __init__.py  _cli.py  _compare.py  _compat.py  _convert.py  _plugins.py  _types.py  _util.py  uromyces.pyi
(+55 files in other folders)
