[package]
name = "uromyces"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[lib]
name = "uromyces"
crate-type = ["lib", "cdylib"]

[dependencies]
rust_decimal = "*"
tree-sitter = "*"
pyo3 = { version = "0.19.0", features = ["abi3-py37", "extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
log = "0.4.17"
env_logger = "0.10.0"
glob = "0.3.0"
internment = { version = "0.7.0", features = ["arc", "serde"] }
hashbrown = { version = "0.12.3", features = ["serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
thin-vec = { version = "0.2.10", features = ["serde"] }

[build-dependencies]
cc = "*"
regex = "1"

[dev-dependencies]
insta = { version = "*", features = ["glob", "json", "filters"] }
