[package]
name = "uromyces"
description = "urom implements parts of Beancount's plain text accounting functionality in Rust"
version = "0.0.1"
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://github.com/yagebu/uromyces/"
keywords = ["accounting", "beancount", "finance"]
categories = ["finance"]

[lib]
name = "uromyces"
crate-type = ["lib", "cdylib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
ahash = { version = "0.8" }
chrono = { version = "0.4", features = ["serde"] }
glob = { version = "0.3" }
hashbrown = { version = "0.15", features = ["serde"] }
indexmap = { version = "2.2" }
internment = { version = "0.8", features = ["arc", "serde"] }
log = { version = "0.4" }
pyo3 = { version = "0.22", features = ["abi3-py39", "multiple-pymethods"] }
pyo3-log = { version = "0.11" }
rust_decimal = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thin-vec = { version = "0.2", features = ["serde"] }
tree-sitter = { version = "0.24" }

[build-dependencies]
cc = { version = "1" }
regex = { version = "1" }

[dev-dependencies]
insta = { version = "1", features = ["glob", "json", "filters"] }
itertools = { version = "0.13" }
regex = { version = "1" }
