[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
include = ["tree-sitter-beancount/**/*"]
features = ["pyo3/extension-module"]

[project]
name = "uromyces"
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click>=7,<9",
  "beancount>=3",
  "fava",
]

# [tool.uv.sources]
# fava = { git = "https://github.com/beancount/fava" }

[dependency-groups]
# Extra dependencies that are used in tests or for linting.
dev = [
    "maturin[patchelf]>=1.7",
    "mypy>=1.11",
    "pip>=24",
    "pytest>=8",
]

[project.scripts]
uro = "uromyces._cli:cli"

[tool.black]
line-length = 79

[tool.mypy]
strict = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = [
    "ALL",
]
extend-ignore = [
    "COM812",      # Handled by formatter
    "ANN401",      # Allow typing.Any
    "TD",          # Allow TODOs
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
strict = true  # always move type-only imports to TYPE_CHECKING-if blocks

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
known-first-party = ["uromyces"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.per-file-ignores]
"contrib/scripts.py" = ["S101"]
"uromyces/uromyces.pyi" = ["PYI034"]
"tests/conftest.py" = ["S101"]
"tests/test_*.py" = ["D", "S101"]
